# netifaces-plus

./: CHANGELOG  README.rst  setup.cfg  setup.py  test.py
.github/workflows/: build-wheel.yml  build-wheels.yml  python-package.yml
netifaces/: _netifaces.c
