[metadata]
name = netifaces
version = 0.10.9
author = Alastair Houghton
author_email = alastair@alastairs-place.net
url = https://github.com/al45tair/netifaces
description = Portable network interface information
long_description_content_type = text/x-rst
long_description = file: README.rst
license = MIT License
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: System :: Networking
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.pyi, py.typed
