[metadata]
name = netifaces-plus
version = 0.12.4
url = https://github.com/tsukumijima/netifaces-plus
description = Portable network interface information (Supports Python 3.6 and higher)
long_description_content_type = text/x-rst
long_description = file: README.rst
license = MIT License
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: System :: Networking
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.pyi, py.typed
